# Pomofy

./: .gitignore  cartoes.db  main.py  pyproject.toml
CardMemoria/: cartoes.db  memory_cards.py
Pomodoro/: pomodoro.py
ToDo/: todo.py
